<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="#D8D8D8"
android:padding="10dp">

<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/FimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxWidth="300dp"
            android:maxHeight="200dp"
            app:layout_constraintBottom_toTopOf="@+id/FeventName_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="300dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/FeventName_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/FeventLocation_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/FeventLocation_textView"
            app:layout_constraintTop_toBottomOf="@+id/FimageView" />

        <TextView
            android:id="@+id/FeventLocation_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/event_location"
            app:layout_constraintBottom_toTopOf="@+id/FeventDate_textView"
            app:layout_constraintEnd_toStartOf="@+id/FseeEvent_button"
            app:layout_constraintStart_toStartOf="@+id/FeventDate_textView"
            app:layout_constraintTop_toBottomOf="@+id/FeventName_textView" />

        <TextView
            android:id="@+id/FeventDate_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/event_date"
            android:textColor="#3F51B5"
            app:layout_constraintBottom_toTopOf="@+id/FpriceRange_textView"
            app:layout_constraintEnd_toStartOf="@+id/FseeEvent_button"
            app:layout_constraintStart_toStartOf="@+id/FpriceRange_textView"
            app:layout_constraintTop_toBottomOf="@+id/FeventLocation_textView" />

        <TextView
            android:id="@+id/FpriceRange_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/price_range"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/FseeEvent_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FeventDate_textView" />

        <Button
            android:id="@+id/FseeEvent_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/see_event"
            app:layout_constraintBottom_toBottomOf="@+id/FpriceRange_textView"
            app:layout_constraintEnd_toEndOf="@+id/deleteEvent_button"
            app:layout_constraintStart_toStartOf="@+id/deleteEvent_button"
            app:layout_constraintTop_toBottomOf="@+id/deleteEvent_button" />

        <Button
            android:id="@+id/deleteEvent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/delete_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/FeventLocation_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>