<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D8D8D8"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:maxWidth="300dp"
                android:maxHeight="200dp"
                app:layout_constraintBottom_toTopOf="@+id/eventName_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="200dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="300dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/eventName_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/event_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/eventLocation_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/eventLocation_textView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/eventLocation_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/event_location"
                app:layout_constraintBottom_toTopOf="@+id/eventDate_textView"
                app:layout_constraintEnd_toStartOf="@+id/seeEvent_button"
                app:layout_constraintStart_toStartOf="@+id/eventDate_textView"
                app:layout_constraintTop_toBottomOf="@+id/eventName_textView" />

            <TextView
                android:id="@+id/eventDate_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/event_date"
                android:textColor="#3F51B5"
                app:layout_constraintBottom_toTopOf="@+id/priceRange_textView"
                app:layout_constraintEnd_toStartOf="@+id/seeEvent_button"
                app:layout_constraintStart_toStartOf="@+id/priceRange_textView"
                app:layout_constraintTop_toBottomOf="@+id/eventLocation_textView" />

            <TextView
                android:id="@+id/priceRange_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/price_range"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/seeEvent_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDate_textView" />

            <Button
                android:id="@+id/seeEvent_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/see_event"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventName_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>